--- a/README.rdoc
+++ b/README.rdoc
@@ -4,7 +4,7 @@
 
 PerfumeForest is an online catalogue of perfumes and corresponding notes. You can 'like' perfumes that you already know you like, and the app will *soon enough* recommend you other perfumes that could interest you from the catalogue. 
 
-The name is derived from so called random forest algorithms, which gave me the idea for this application originally.
+The name is derived from so called random forest algorithms, which sparked the idea for this application initially.
 
 Technical stack includes Ruby on Rails 4.2, Thin webserver, Postgresql for production (deployed on Heroku), Haml for templating, vanilla CSS, and a bit of JavaScript to implement the client side 'like perfumes' functionality. Test suite is powered by RSpec, Capybara, Selenium and Chrome driver.
 
