--- a/README.rdoc
+++ b/README.rdoc
@@ -6,7 +6,7 @@ PerfumeForest is an online catalogue of perfumes and corresponding notes. You ca
 
 The name is derived from so called random forest algorithms, which sparked the idea for this application initially.
 
-Technical stack includes Ruby on Rails 4.2, Thin webserver, Postgresql for production (deployed on Heroku), Haml for templating, vanilla CSS, and a bit of JavaScript to implement the client side 'like perfumes' functionality. Test suite is powered by RSpec, Capybara, Selenium and Chrome driver.
+Technical stack includes Ruby on Rails 4.2, Thin webserver, Postgresql for production (currently deployed on Heroku), Haml for templating, vanilla CSS, and a bit of JavaScript to implement the client side 'like perfumes' functionality. Test suite is powered by RSpec, Capybara, Selenium and Chrome driver.
 
 Feedback is very welcome, and so are contributions, if you feel interested in the project.
 
