--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = README
 
-== Perfume ... what?
+== PerfumeForest
 
 PerfumeForest is an online catalogue of perfumes and corresponding notes. You can 'like' perfumes that you already know you like, and the app will *soon enough* recommend you other perfumes that could interest you from the catalogue. 
 
