--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,7 @@ The name is derived from so called random forest algorithms, which sparked the i
 
 Technical stack includes Ruby on Rails 4.2, Thin webserver, Postgresql for production (currently deployed on Heroku), Haml for templating, vanilla CSS, and a bit of JavaScript to implement the client side 'like perfumes' functionality. Test suite is powered by RSpec, Capybara, Selenium and Chrome driver.
 
-Feedback is very welcome, and so are contributions, if you feel interest in the project.
+Feedback is very welcome, and so are contributions, if you feel interested in the project.
 
 == Installation steps
   git clone https://github.com/matildasmeds/perfume_forest.git
