--- a/README.rdoc
+++ b/README.rdoc
@@ -6,7 +6,7 @@ PerfumeForest is a *currently small* online catalogue of perfumes and correspond
 
 Visit the application --> https://perfume-forest.herokuapp.com
 
-The name is derived from so called random forest algorithms, which sparked the idea for this application initially. The application currently stores likes in the browser's local storage. No login is required, hence there is no authentication mechanism in place. I plan to write up some lessons learnt *soon*, because even if the project is small in scope, I have learnt a lot already.
+The name is derived from so called random forest algorithms, which sparked the idea for this application initially. The application currently stores likes in the browser's local storage. No login is required, hence there is no authentication mechanism in place. I plan to write up some lessons learnt, because even if the project is small in scope, I have learnt a lot already.
 
 Technical stack includes Ruby on Rails 4.2, Thin webserver, Postgresql for production (currently deployed on Heroku), Haml for templating, vanilla CSS, and a bit of JavaScript to implement the client side 'like perfumes' functionality. Test suite is powered by RSpec, Capybara, Selenium and Chrome driver.
 
