--- a/README.rdoc
+++ b/README.rdoc
@@ -8,7 +8,7 @@ Visit the application --> https://perfume-forest.herokuapp.com
 
 The name is derived from so called random forest algorithms, which sparked the idea for this application initially. The application currently stores likes in the browser's local storage. No login is required, hence there is no authentication mechanism in place.
 
-Technical stack includes Ruby on Rails 4.2, Thin webserver, Postgresql for production (currently deployed on Heroku), Haml for templating, vanilla CSS, and a bit of JavaScript to implement the client side 'like perfumes' functionality. Test suite is powered by RSpec, Capybara, Selenium and Chrome driver.
+Technical stack includes Ruby on Rails 4.2, Thin webserver, Postgresql, Haml for templating, vanilla CSS, and a bit of JavaScript to implement the client side 'like perfumes' functionality. Test suite is powered by RSpec, Capybara, Selenium and Chrome driver.
 
 Feedback is very welcome, and so are contributions, if you feel interested in the project.
 
