--- a/README.rdoc
+++ b/README.rdoc
@@ -2,11 +2,12 @@
 
 == About
 
-PerfumeForest is a *currently small* online catalogue of perfumes and corresponding olfatory notes. You can 'like' perfumes that you already know you like, and the app will *soon enough* recommend you other perfumes that could interest you from the catalogue. 
+PerfumeForest is a tiny catalogue of perfumes and olfatory notes. You can 'like' perfumes that you already know you like.
+The original idea was to create a recommendation engine, based on likes, but I don't have the interest to do that currently.  
 
 Visit the application --> https://perfume-forest.herokuapp.com
 
-The name is derived from so called random forest algorithms, which sparked the idea for this application initially. The application currently stores likes in the browser's local storage. No login is required, hence there is no authentication mechanism in place.
+The name is derived from so called random forest algorithms, which sparked the idea for this application initially. The application stores likes in the browser's local storage. No login is required, hence there is no authentication mechanism in place.
 
 Technical stack includes Ruby on Rails 4.2, Thin webserver, Postgresql, Haml for templating, vanilla CSS, and a bit of JavaScript to implement client side functionalities. Test suite is powered by RSpec, Capybara, Selenium and Chrome driver.
 
