--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 
 == About
 
-PerfumeForest is a tiny catalogue of perfumes. You can 'like' perfumes. The application stores likes in the browser's local storage. 
+PerfumeForest is a tiny catalogue of perfumes and olfatory notes. You can 'like' perfumes. The application stores likes in the browser's local storage. NOT MAINTAINED.
 
 Ruby on Rails 4.2, Thin webserver, Postgresql, Haml, CSS, JavaScript, RSpec, Capybara, Selenium and Chrome driver.
 
